# Hybrid-E-commerce-Search

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/: __init__.py  main.py  schemas.py  two_stage_search.py
frontend/: nginx.conf  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: searchClient.ts
frontend/src/components/: QueryForm.tsx  ResultCard.tsx  ResultsView.tsx  StatsBar.tsx
gateway/: nginx.conf
orchestrator_service/: main.py
scripts/: setup_deps.sh  two_stage_search.py
tests/: test_schemas.py
ui/web/: index.html  package-lock.json
ui/web/src/api/: searchClient.ts
ui/web/src/components/: ResultCard.tsx
