[project]
name = "hybrid-ecommerce-search"
version = "0.1.0"
description = "Two-stage search pipeline: Stage 1 Retrieval +Stage 2 Reranking"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "pydantic>=2.0.0",
    "pre-commit>=4.5.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
two-stage-search = "backend.two_stage_search:main"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
